K8s/ingress-template.yaml
# 🌐 INGRESS FINAL AVEC HÔTE
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fullstack-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx" 
spec:
  rules:
  - host: mern-tasks.com # 👈 NOUVEAU : Le nom de domaine complet
    http:
      paths:
      # 1. Règle pour l'API Backend
      - path: /api/tasks
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000         
      # 2. Règle par défaut pour le Frontend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service 
            port:
              number: 80
